[project]
name = "langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "jzhu457",email = "jzhu457@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

packages = [{include = "graph"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
